# mofgen

./: .gitignore  LICENSE  README.md  example_mof_generation.py  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  base.py  mof_master.py
agents/agent_2_linkergen/: linkergen_agent.py
agents/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
dft_analysis/: plot_formation_energies.py  plot_workflow_completion.py
diffuse_materials/: __init__.py  train.py
docs/superpowers/plans/: 2026-04-06-cross-platform-fix-and-testing.md
docs/superpowers/specs/: 2026-04-06-cross-platform-fix-and-testing-design.md  2026-04-25-repo-cleanup-and-data-extraction-design.md
examples/: extract_trajectories.py  trajectories_to_extxyz.py
mofgen_tools/: __init__.py  __main__.py  server.py
mofgen_tools/agents/: __init__.py  linker_gen.py  mof_master.py  qforge.py
mofgen_tools/data/: __init__.py  local.py  structures.py  trajectories.py
scripts/: mp_data_extraction.py  test_imports.py
tests/: conftest.py
tests/test_agents/: test_linkergen.py  test_mof_master.py  test_providers.py  test_qforge.py
tests/test_diffusion/: test_cif_to_tfrecord.py  test_diffusion.py  test_model.py  test_vae.py
tests/test_mofgen_tools/: test_agent_tools.py  test_data_tools.py
tests/test_mp_data/: test_mp_extraction.py
