[project]
name = "mofgen"
description = "MOF Generation workflow with diffusion models and AI agents"
version = "0.1.0"
authors = [
    {name = "MOFGen Team"}
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "tensorflow>=2.15.0",
    "einops>=0.6.0",
    "absl-py>=1.4.0",
    "fire>=0.5.0",
    "matplotlib>=3.7.0",
    "imageio>=2.25.0",
    "tqdm>=4.65.0",
    "pymatgen>=2023.12.18",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
